--- a/03_thesis/01_document/Tesis_JM.tex
+++ b/03_thesis/01_document/Tesis_JM.tex
@@ -5,7 +5,7 @@
 \usepackage{amsmath}
 \usepackage{tcolorbox}
 \usepackage{graphicx}
-\graphicspath{{./Figuras/}}
+\graphicspath{{../02_figures/}}
 \usepackage{float}
 
 \title{Modelo de Censura Intervalar para datos positivos}
