--- a/03_thesis/01_document/Tesis_JM.tex
+++ b/03_thesis/01_document/Tesis_JM.tex
@@ -19,6 +19,7 @@
 \include{01_intro/01_intro}
 \include{02_reparametrization/02_weibull}
 \include{03_model/03_model}
+\include{04_simulation/04_simulation}
 
 \chapter{Aplicaciones}
 
