--- a/03_thesis/01_document/Tesis_JM.tex
+++ b/03_thesis/01_document/Tesis_JM.tex
@@ -5,9 +5,12 @@
 \usepackage{amsmath}
 \usepackage{tcolorbox}
 \usepackage{graphicx}
+\usepackage{listings}
 \graphicspath{{../../02_figures/}}
 \usepackage{float}
-
+\lstset{
+   basicstyle=\fontsize{8}{8}\selectfont\ttfamily
+}
 \title{Modelo de Censura Intervalar para datos positivos}
 \author{Justo Andrés Manrique Urbina \\ Asesor: Cristian L. Bayes}
 
