--- a/03_thesis/01_document/04_simulation/04_simulation.tex
+++ b/03_thesis/01_document/04_simulation/04_simulation.tex
@@ -1,32 +1,54 @@
 \chapter{Estudio de Simulación}
-El presente capítulo tiene como objetivo ejecutar un estudio de simulación para evaluar si tanto el modelo descrito permite capturar los parámetros de regresión cuantílica bajo censura intervalar. Para evaluar el desempeño de los parámetros obtenidos, evaluaremos el sesgo relativo, error cuadrático medio y la cobertura del intervalo de confianza con un nivel de significancia al 95\%.
+El presente capítulo tiene como objetivo realizar un estudio de simulación en el que se evalúe el adecuado rendimiento del modelo propuesto en los capítulos antecedentes. Esto comprende generar una base de datos en dónde se tenga una variable aleatoria $Y_i \sim W_r(q_t, \alpha,t)$, la cual está subyace la variable censurada $Z$ que sigue lo denotado en la sección 3.1). Asimismo, dicha base de datos contiene otras variables simuladas, las cuales actuarán como variables independientes en un contexto de regresión. El objetivo principal del estudio de simulación es observar si el modelo de regresión planteado, así como la implementación del mismo, permite capturar adecuadamente los parámetros de regresión establecidos a priori. Los criterios sobre los cuales se analizará el rendimiento del modelo son: sesgo relativo, error cuadrático medio y cobertura.
 
-Para cada uno de los cuantiles $t=\{0.1, 0.2, 0.3, \dots , 0.9\}$ se realizó la simulación de $n=10000$ valores de las siguientes variables:
+El proceso de simulación consiste en generar 100 réplicas de la variable aleatoria $Y_i \sim W_r(q_t, \alpha,t)$ basados en los valores de $n=\{1000, 5000, 10000\}$ de las siguientes variables:
 \[X_{1} \sim Beta(2,3)\]
 \[X_{2} \sim Normal(2,0.5)\]
 \[X_{3} \sim Gamma(2,25)\]
 
-En base a estas variables simulamos la variable aleatoria dependiente $Y_{i} \sim W_{r}(q_{t},\alpha,t)$ en donde $q_{t}$ está definida de la siguiente forma:
-\[q_{t} = e^{X^{T}\beta}, X = \{1,X_{1},X_{2},X_{3}\}\]
+Conforme lo mencionado en la sección 3.2.1), la función de enlace para crear las réplicas está denotada por $q_t =  \exp(x_i^T \beta)$, en dónde $\beta =[0.5, 0.3, 0.6, 0.8]^T$. Por otro lado, el parámetro de dispersión tiene el valor $\alpha = 2$. Finalmente, se realizará la evaluación por los cuantiles $t = [0.1, 0.2, \dots, 0.9]$.
 
-Para propósitos de la simulación, se fijaron los parámetros siguientes:
-\[\alpha=2\]
-\[\beta_{0}=0.5\]
-\[\beta_{1}=0.3\]
-\[\beta_{2}=0.6\]
-\[\beta_{3}=0.8\]
+Cada réplica de la variable aleatoria $Y_i \sim W_r(q_t, \alpha,t)$ subyace la variable de censura intervalar $Z$, la cual particiona la variable $Y_i$ en intervalos de igual amplitud, con la excepción del último intervalo, el cual tiene la estructura $[L_{inf}, \infty]$. Una vez generada dicha variable, se realiza el modelamiento de la variable de censura intervalar sobre las variables independientes creadas previamente.
 
-Una vez generada la variable aleatoria $ Y_{i} $, se censuró esta información en base al criterio de particiones iguales hasta determinado el percentil 80. Esto se debe a que la variable respuesta $ Y_{i} $ tiene colas pesadas. Ver seudocódigo en la siguiente:
+\section{Implementación del modelo}
 
-Seudocódigo aquí
+El seudocódigo es el siguiente:
 
-Se tomó en cuenta las siguientes consideraciones:
+\begin{lstlisting}
+Simulamos 10,000 valores de las siguientes distribuciones:
 
-\begin{itemize}
-    \item Puntos iniciales
-    \item Cálculo de 
-\end{itemize}}
+X1 ~ Beta(2,3) 
+X2 ~ Normal(2,0.5)
+X3 ~ Gamma(2,25)
 
-Finalmente, se observa que:
+Definimos los siguientes valores:
 
-Ver cuadro a continuación
+B = [0.5, 0.3, 0.6, 0.8] 
+Sigma = 2
+Qt = exp(B[1] + B[2]*X1 + B[3]*X2 + B[4]*X3)
+t=[0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9]
+M = 100
+
+Para cada cuantil en t:
+	Para cada replica en M:
+		1 Simular 10,000 valores de la distribucion 
+			Y ~ W_r(Qt, Sigma, cuantil)
+		2 Censurar la variable Y de forma intervalar tal que
+			Z ~ Categorica
+		3 Obtener los limites inferiores y superiores de
+			cada categoria de Z
+		4 Crear la base de datos simulada
+			df <- [L_inf, L_sup, X1, X2, X3]
+		5 Ejecutar la regresion de censura intervalar
+		6 Guardar los resultados
+\end{lstlisting}
+
+% Pseudocódigo del modelo?
+
+Una vez generados los resultados, se evaluó por cada cuantil lo siguiente:
+\[ \text{Sesgo relativo:} \frac{1}{M}(\hat{\theta_j} - \theta_j)\]
+\[ \text{ECM:} \frac{1}{M} \sum_1^M (\hat{\theta_j} - \theta_j)^2 \]
+\[ \text{Cobertura:} \frac{1}{M} \sum_1^M (\hat{\theta_j} - \theta_j)^2 \]
+
+\section{Resultados}
+
