--- a/03_thesis/01_document/Tesis_JM.tex
+++ b/03_thesis/01_document/Tesis_JM.tex
@@ -6,11 +6,10 @@
 \usepackage{tcolorbox}
 \usepackage{graphicx}
 \usepackage{listings}
+\usepackage{multirow}
 \graphicspath{{../../02_figures/}}
+\usepackage{longtable}
 \usepackage{float}
-\lstset{
-   basicstyle=\fontsize{8}{8}\selectfont\ttfamily
-}
 \title{Modelo de Censura Intervalar para datos positivos}
 \author{Justo Andrés Manrique Urbina \\ Asesor: Cristian L. Bayes}
 
@@ -23,10 +22,7 @@
 \include{02_reparametrization/02_weibull}
 \include{03_model/03_model}
 \include{04_simulation/04_simulation}
-
-\chapter{Aplicaciones}
-
-Este capítulo se completará en posteriores entregas.
+\include{05_datosreales/05_datosreales}
 
 \chapter{Conclusiones}
 
