--- a/03_thesis/01_document/05_datosreales/05_datosreales.tex
+++ b/03_thesis/01_document/05_datosreales/05_datosreales.tex
@@ -28,4 +28,4 @@ El modelo propuesto en el capítulo 3 será utilizado en la presente base de dat
 
 \section{Resultados}
 
-Sección en construcción.
+Esta sección se entregará en posteriores entregas.
