--- a/01_document/tesis-ejemplo.tex
+++ b/01_document/tesis-ejemplo.tex
@@ -110,14 +110,11 @@ Dedicatoria...
 
 % Agradecimentos
 \chapter*{Agradecimentos}
-Agradecimentos ...
+A mi asesor Cristian Bayes y al profesor Giancarlo Sal y Rosas, quienes ofrecieron la 
 
 % ---------------------------------------------------------------------------- %
 % Resumen
 \chapter*{Resumen}
-Existen preguntas específicas que, dada las naturaleza de las mismas, los encuestadores temen que los encuestados respondan inadecuadamente. Esto se debe a que dichas preguntas podrían considerarse intrusivas e inclusive vergonzosas. Ello motiva a los encuestados a rehusarse de responderlas, u ofrecer - deliberadamente - respuestas incorrectas. No obstante, esta clase de preguntas crea un dilema para los encuestados: ellos acordaron a los investigadores a proveer información, pero no estarían de acuerdo en brindar completamente la información requerida (2009: 240-241). El encuestador, consciente de esta realidad, busca salvaguardas y equilibrio entre la privacidad del encuestado y la obtención del dato. 
-
-Una vez obtenidos los datos, al momento de efectuar el análisis y modelamiento de los mismos, el modelo se debe acoplar a la nueva estructura de los mismos.
 
 \noindent \textbf{Palabras clave:} censura intervalar, regresión con censura.
 
